[tool.poetry]
name = "pulpy"
version = "0.1.0"
description = "Simple python simulation tool for distributed systems."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20"
simpy = "^4.0.1"

[tool.poetry.dev-dependencies]
matplotlib = "^3.6.1"
networkx = "^2.8.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
